[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-files"
version = "0.0.0"
description = "Web-ready standardized file processing and serialization. Read, load and convert to standard file types with a common interface."
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
license = { text = "GPLv3" }
readme = "README.md"
dependencies = [
    "numpy>=1.18.0",
    "opencv-python>=4.2",
    "soundfile>=0.12.0",
]

[project.urls]
Repository = "https://github.com/SocAIty/multimodal-files"


[project.optional-dependencies]
full = [
    "numpy>=1.18.0",
    "opencv-python>=4.2",
    "soundfile>=0.12.0",
]
ImageFile = [
    "numpy>=1.18.0",
    "opencv-python>=4.2",
]
AudioFile = [
    "numpy>=1.18.0",
    "soundfile>=0.12.0",
]
